<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bluemid"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="20dp"/>

    <ImageView
        android:id="@+id/imagenperfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@drawable/fedora"/>

    <TextView
        android:id="@+id/tv_nombreperfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre Apellido"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_configuraciones"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/config"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"/>
        <Button
            android:id="@+id/btn_unidades"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/uni"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"/>
        <Button
            android:id="@+id/btn_idiomas"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/idio"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"/>
        <Button
            android:id="@+id/btn_datos_per"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/dato"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"/>
        <Button
            android:id="@+id/btn_recipientes"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/Reci"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"/>
        <Button
            android:id="@+id/btn_cerrar_sesion"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/cerrar"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/bluelow"/>


    </LinearLayout>

</LinearLayout>