<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="molina.raul.aquareminder.ui.home.HomeFragment"
        android:label="@string/consumo"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="molina.raul.aquareminder.ui.dashboard.DashboardFragment"
        android:label="@string/historial"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="molina.raul.aquareminder.ui.notifications.NotificationsFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_notifications" />
</navigation>